--- a/TeamSpecific/BigData/02.BasicArchitecture/02.BestPractices.md
+++ b/TeamSpecific/BigData/02.BasicArchitecture/02.BestPractices.md
@@ -31,3 +31,7 @@
   - HBase (storage, querying)
   - Hive (querying)
   - Impala (querying)
+- Describe the need of environmental seperation (test / pre-production / production) to the best of your abbility and refer to:
+  - Necessity of network seperation between environments
+  - Pros and cons of working with test and pre-prod environments
+  - Necessity of unity between environments
